After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721830 - The positions of the buttons in the headerbar is wrong
The positions of the buttons in the headerbar is wrong
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: shell
3.11.x
Other Mac OS
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-08 21:40 UTC by Yosef Or Boczko
Modified: 2014-01-09 10:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell: Fix headerbar item positions (1.51 KB, patch)
2014-01-08 21:40 UTC, Yosef Or Boczko
committed Details | Review

Description Yosef Or Boczko 2014-01-08 21:40:13 UTC
After the following commit in gtk+, the positions of the buttons
in the headerbar is wrong:
https://git.gnome.org/browse/gtk+/commit/?id=c3e91c70317b337c72282a1aad68fc82a82bf9e9
Comment 1 Yosef Or Boczko 2014-01-08 21:40:59 UTC
Created attachment 265792 [details] [review]
shell: Fix headerbar item positions
Comment 2 Rui Matos 2014-01-09 10:44:36 UTC
Review of attachment 265792 [details] [review]:

Ok
Comment 3 Yosef Or Boczko 2014-01-09 10:46:15 UTC
Review of attachment 265792 [details] [review]:

Pushed as c50b63c - shell: Fix headerbar item positions